docs: Use mdBook anchors

--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -71,7 +71,7 @@ HUM: [local humidity] %
 Using a bus manager, implement the second sensor. Read out its values and print the values from both sensors.
 
 
-Continue with your own solution from part one. Alternatively you can start with the provided partial solution of Part 1: `i2c-sensor-reading/examples/part_1.rs`.
+Continue with your own solution from part one. Alternatively, you can start with the provided partial solution of Part 1: `i2c-sensor-reading/examples/part_1.rs`.
 
 `i2c-sensor-reading/examples/part_2.rs` contains a working solution of Part 2. You can consult it if you need help, by running:
 
@@ -84,7 +84,7 @@ cargo run --example part_2
 ✅ Import the driver crate for the ICM42670p.
 
 ```rust
-use icm42670::{Address, Icm42670, PowerMode as imuPowerMode};
+{{#include ../../advanced/i2c-sensor-reading/examples/part_2.rs:include}}
 ```
 
 ✅ Create an instance of the sensor.
@@ -101,7 +101,7 @@ This is an ownership issue. Every place in memory needs to be owned by something
 ✅ Import the bus manager crate.
 
 ```rust
-use shared_bus::BusManagerSimple;
+{{#include ../../advanced/i2c-sensor-reading/examples/part_2.rs:shared_bus}}
 ```
 
 ✅ Create an instance of a simple bus manager. Make two proxies and use them instead of the original I²C instance to pass to the sensors.
