--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -13,29 +13,13 @@ We're not going to write an entire driver, merely the first step: the `hello wor
 To use a peripheral sensor first you must get an instance of it. The sensor is represented as a struct that contains both its device address, and an object representing the I²C bus itself. This is done using traits defined in the [`embedded-hal`](https://docs.rs/embedded-hal/latest/embedded_hal/) crate. The struct is public as it needs to be accessible from outside this crate, but its fields are private.
 
 ```rust
-#[derive(Debug)]
-pub struct ICM42670P<I2C> {
-    /// The concrete I²C device implementation.
-    i2c: I2C,
-
-    /// Device address
-    address: DeviceAddr,
-}
-
-// ...
+{{#include ../../advanced/i2c-driver/src/icm42670p_solution.rs:struct}}
 ```
 
 We add an `impl` block that will contain all the methods that can be used on the sensor instance. It also defines the Error Handling. In this block, we also implement an instantiating method. Methods can also be public or private. This method needs to be accessible from outside, so it's labelled `pub`. Note that written this way, the sensor instance takes ownership of the I²C bus.
 
 ```rust
-impl<I2C, E>ICM42670P<I2C>
-where
-    I2C: i2c::WriteRead<Error = E> + i2c::Write<Error = E>,
-{
-    /// Create a new instance of the ICM42670P.
-    pub fn new(i2c: I2C, address: DeviceAddr) -> Result<Self, E> {
-        Ok(Self{ i2c, address })
-    }
+{{#include ../../advanced/i2c-driver/src/icm42670p_solution.rs:impl}}
 // ...
 ```
 ### Device Address
@@ -43,8 +27,7 @@ where
 - The device's addresses are available in the code:
 
 ```rust
-AD0 = 0b110_1000, // or 0x68
-AD1 = 0b110_1001, // or 0x69
+{{#include ../../advanced/i2c-driver/src/icm42670p_solution.rs:device_addr}}
 ```
 
 - This I²C device has two possible addresses - `0x68` and `0x69`.
@@ -56,16 +39,7 @@ More information is available in the [datasheet, section 9.3](https://invensense
 The sensor's registers are represented as enums. Each variant has the register's address as value. The type `Register` implements a method that exposes the variant's address.
 
 ```rust
-#[derive(Clone, Copy)]
-pub enum Register {
-    WhoAmI = 0x75,
-}
-
-impl Register {
-    fn address(&self) -> u8 {
-        *self as u8
-    }
-}
+{{#include ../../advanced/i2c-driver/src/icm42670p_solution.rs:register}}
 
 ```
 
@@ -74,24 +48,9 @@ impl Register {
 We define a _read_ and a _write_ method, based on methods provided by the `embedded-hal` crate. They serve as helpers for more specific methods and as an abstraction that is adapted to a sensor with 8-bit registers. Note how the `read_register()` method is based on a `write_read()` method. The reason for this lies in the characteristics of the I²C protocol: We first need to write a command over the I²C bus to specify which register we want to read from. Helper methods can remain private as they don't need to be accessible from outside this crate.
 
 ```rust
-impl<I2C, E>ICM42670P<I2C>
-where
-    I2C: i2c::WriteRead<Error = E> + i2c::Write<Error = E>,
-{
-    //...
-    fn write_register(&mut self, register: Register, value: u8) -> Result<(), E> {
-        let byte = value as u8;
-        self.i2c
-            .write(self.address as u8, &[register.address(), byte])
-    }
-
-    fn read_register(&mut self, register: Register) -> Result<u8, E> {
-        let mut data = [0];
-        self.i2c
-            .write_read(self.address as u8, &[register.address()], &mut data)?;
-        Ok(u8::from_le_bytes(data))
-    }
-}
+{{#include ../../advanced/i2c-driver/src/icm42670p_solution.rs:impl}}
+    // ...
+{{#include ../../advanced/i2c-driver/src/icm42670p_solution.rs:read_write}}
 ```
 
 ✅ Implement a public method that reads the `WhoAmI` register with the address `0x75`. Make use of the above `read_register()` method.
