adjust example documentation for new mqtt version

--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -43,15 +43,15 @@ The `message_event` parameter in the handler closure is of type `Result<Event<Es
 Since we're only interested in processing successfully received messages, we can make use of deep pattern matching into the closure:
 
 ```rust
-let mut client =
-    EspMqttClient::new(
-        broker_url,
-        &mqtt_config,
-        move |message_event| match message_event {
-            Ok(Received(msg)) => process_message(msg, &mut led),
-            _ => warn!("Received from MQTT: {:?}", message_event),
-        },
-    )?;
+EspMqttClient::new_cb(
+    &broker_url,
+    &mqtt_config,
+    move |message_event| match message_event.payload() {
+        Received { data, details, .. } => process_message(data, details, &mut led),
+        Error(e) => warn!("Received error from MQTT: {:?}", e),
+        _ => info!("Received from MQTT: {:?}", message_event.payload()),
+    },
+)?;
 ```
 
 In the processing function, you will handle `Complete` messages.
@@ -59,20 +59,20 @@ In the processing function, you will handle `Complete` messages.
 💡 Use Rust Analyzer to generate the missing match arms or match any other type of response by logging an `info!()`.
 
 ```rust
-match message.details() {
-    // All messages in this exercise will be of type `Complete`
-    // The other variants of the `Details` enum are for larger message payloads
-    Complete => {
-
-        // Cow<&[u8]> can be coerced into a slice &[u8] or a Vec<u8>
-        // You can coerce it into a slice to be sent to try_from()
-        let message_data: &[u8] = &message.data();
-        if let Ok(ColorData::BoardLed(color)) = ColorData::try_from(message_data) {
-            // Set the LED to the newly received color
-
+fn process_message(data: &[u8], details: Details, led: &mut WS2812RMT) {
+    match details {
+        Complete => {
+            info!("{:?}", data);
+            let message_data: &[u8] = data;
+            if let Ok(ColorData::BoardLed(color)) = ColorData::try_from(message_data) {
+                info!("{}", color);
+                if let Err(e) = led.set_pixel(color) {
+                    error!("Could not set board LED: {:?}", e)
+                };
+            }
         }
+        _ => {}
     }
-    // Use Rust Analyzer to generate the missing match arms or match an incomplete message with a log message.
 }
 ```
 
@@ -112,14 +112,14 @@ let command = Command::BoardLed(color)
 ✅ in the `process_message()` function, you will need to parse the topic.
 
 ```rust
-match message.details() {
+match details {
     Complete => {
         // All messages in this exercise will be of type `Complete`
         // the other variants of the `Details` enum
         // are for larger message payloads
 
         // Cow<str> behaves a lot like other Rust strings (&str, String)
-        let topic: Cow<str> = message.topic(token);
+        let topic: Cow<str> = topic(token);
 
         // Determine if we're interested in this topic and
         // Dispatch based on its content
