docs: Update message_event docs

--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -39,8 +39,8 @@ client.subscribe(subscribe_topic, QoS::AtLeastOnce)
 ## Handling Incoming Messages
 
 
-The `message_event` parameter in the handler closure is of type `Result<Event<EspMqttMessage>`.
-Since we're only interested in processing successfully received messages, we can make use of deep pattern matching into the closure:
+The `message_event` parameter in the handler closure is of type `EspMqttEvent`, which has a `payload()` method to access the `EventPayload`
+Since we're only interested in processing successfully received messages:
 
 ```rust
 {{#include ../../intro/mqtt/exercise/examples/solution_publ_rcv.rs:mqtt_client}}
