Update training to latest releases (#257)
* feat: Update training to latest releases

Co-authored-by: juliankrieger <julian.krieger@me.com>

* feat: Update handler methods

* refactor: Use expect instead of unwrap

* feat: Update esp-idf version and add bin section to Cargo.toml

* docs: Update message_event docs

---------

Co-authored-by: juliankrieger <julian.krieger@me.com>

--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -39,19 +39,11 @@ client.subscribe(subscribe_topic, QoS::AtLeastOnce)
 ## Handling Incoming Messages
 
 
-The `message_event` parameter in the handler closure is of type `Result<Event<EspMqttMessage>`.
-Since we're only interested in processing successfully received messages, we can make use of deep pattern matching into the closure:
+The `message_event` parameter in the handler closure is of type `EspMqttEvent`, which has a `payload()` method to access the `EventPayload`
+Since we're only interested in processing successfully received messages:
 
 ```rust
-let mut client =
-    EspMqttClient::new(
-        broker_url,
-        &mqtt_config,
-        move |message_event| match message_event {
-            Ok(Received(msg)) => process_message(msg, &mut led),
-            _ => warn!("Received from MQTT: {:?}", message_event),
-        },
-    )?;
+{{#include ../../intro/mqtt/exercise/examples/solution_publ_rcv.rs:mqtt_client}}
 ```
 
 In the processing function, you will handle `Complete` messages.
@@ -59,21 +51,7 @@ In the processing function, you will handle `Complete` messages.
 💡 Use Rust Analyzer to generate the missing match arms or match any other type of response by logging an `info!()`.
 
 ```rust
-match message.details() {
-    // All messages in this exercise will be of type `Complete`
-    // The other variants of the `Details` enum are for larger message payloads
-    Complete => {
-
-        // Cow<&[u8]> can be coerced into a slice &[u8] or a Vec<u8>
-        // You can coerce it into a slice to be sent to try_from()
-        let message_data: &[u8] = &message.data();
-        if let Ok(ColorData::BoardLed(color)) = ColorData::try_from(message_data) {
-            // Set the LED to the newly received color
-
-        }
-    }
-    // Use Rust Analyzer to generate the missing match arms or match an incomplete message with a log message.
-}
+{{#include ../../intro/mqtt/exercise/examples/solution_publ_rcv.rs:process_message}}
 ```
 
 💡 Use a logger to see what you are receiving, for example, `info!("{}", color);` or `dbg!(color)`.
@@ -98,7 +76,6 @@ let raw = RawCommandData {
     path: command,
     data: message.data(),
 };
-
 ```
 
 Check the `host-client`:
@@ -108,36 +85,6 @@ Check the `host-client`:
 ```rust
 let command = Command::BoardLed(color)
 ```
-
-✅ in the `process_message()` function, you will need to parse the topic.
-
-```rust
-match message.details() {
-    Complete => {
-        // All messages in this exercise will be of type `Complete`
-        // the other variants of the `Details` enum
-        // are for larger message payloads
-
-        // Cow<str> behaves a lot like other Rust strings (&str, String)
-        let topic: Cow<str> = message.topic(token);
-
-        // Determine if we're interested in this topic and
-        // Dispatch based on its content
-        let is_command_topic: bool = /* ... */;
-        if is_command_topic {
-            let raw = RawCommandData { /* ... */ };
-            if let Ok(Command::BoardLed(color)) = Command::try_from(raw) {
-                // Set the LED to the newly received color
-            }
-
-        },
-        _ => {}
-    }
-}
-```
-
-💡 Since you will be iterating over a MQTT topic, you will need to `split()` on a string returns an iterator. You can access a specific item from an iterator using [`nth()`](https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.nth).
-💡 The solution implementing hierarchy can be run with `cargo run --example solution2`, while the solution without can be run with `cargo run` or `cargo run --example solution1`
 
 ### Other Tasks
 
